# Vibgyor-ScreenTime

./: IMPLEMENTATION_SUMMARY.md  README.md
ScreenTime/: INSTALL_GUIDE.md  ScreenTimeMonitoringAdmin.iss  ScreenTimeMonitoringUser.iss  ScreenTimeMonitoring_Hidden.vbs  build-installers.bat
docs/superpowers/specs/: 2026-07-16-genuine-activity-engine-design.md
monitoring-client-rust/: CONSOLE_FIX_FINAL.md  CONSOLE_FIX_SUMMARY.md  CONSOLE_HIDDEN_FINAL.md  CONSOLE_WINDOW_FIX.md  CONSOLE_WINDOW_GUIDE.md  Cargo.toml  ENV_FILE_OVERWRITE_FIX.md  ENV_OVERWRITE_QUICK_FIX.txt  FINAL_CONSOLE_FIX.md  GITHUB_OTA_SETUP.md  GUI_DIALOG_SYSTEMS.md  GUI_FORMATTING_FIX.md  GUI_NEWLINE_FIX_FINAL.md  HOW_TO_RUN.txt  INSTALLER_SETUP.md  QUICK_FIX.md  QUICK_FIX_CONSOLE.md  README_CONSOLE_FIX.md  REBUILD_INSTRUCTIONS.md  RELEASE_AND_UPDATE.md  SETUP_DIALOG_IMPROVEMENTS.md  START_HERE.txt  SYSTEM_TRAY.md  build.bat  build.rs  build_and_test.bat  build_release.bat  info.json  info.json.example  rebuild_no_console.bat  start_hidden.vbs  start_monitoring.bat  test_build.bat
monitoring-client-rust/docs/: CONFIG_MODULE.md  SETUP_NAVIGATION.md
monitoring-client-rust/examples/: config_demo.rs
monitoring-client-rust/logs/: log.txt
monitoring-client-rust/src/: lib.rs  main.rs
monitoring-client-rust/src/modules/: activity_tracker.rs  app_monitor.rs  browser_monitor.rs  config.rs  config_watcher.rs  employee_info.rs  error.rs  genuineness.rs  gui.rs  http_transmitter.rs  idle_prompt.rs  input_analyzer.rs  location_tracker.rs  logger.rs  mod.rs  otp_client.rs  payload_builder.rs  queue_manager.rs  resilience.rs  retry_manager.rs  screenshot.rs  system_info.rs  system_tray.rs  types.rs  updater.rs
monitoring-client-rust/tests/: config_test.rs
monitoring-client-rust/watchdog/: Cargo.toml
monitoring-client-rust/watchdog/src/: main.rs
monitoring-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
monitoring-dashboard/src/: App.tsx  index.css  main.tsx
monitoring-dashboard/src/components/: ActivityTimelineChart.tsx  BrowserUsageBreakdown.tsx  CommandPalette.tsx  ConfirmationModal.tsx  DateRangeFilter.tsx  DurationChartTooltip.tsx  EmployeeTimeline.tsx  MetricDetailsModal.tsx  Navbar.tsx  OTPModal.tsx  PageHeader.tsx  Pagination.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatCard.tsx  StatInsightModal.tsx  ThemedDatePicker.tsx  ThemedSelect.tsx  TimelineTooltip.tsx  TopBar.tsx
monitoring-dashboard/src/contexts/: ThemeContext.tsx
monitoring-dashboard/src/layouts/: DashboardLayout.tsx
monitoring-dashboard/src/pages/: AlertsPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  EmployeeDetailPage.tsx  EmployeeSelfViewPage.tsx  EmployeesPage.tsx  LoginPage.tsx  ScreenshotsPage.tsx  SettingsPage.tsx  TimesheetsPage.tsx  WellbeingPage.tsx
monitoring-dashboard/src/services/: api.ts  dashboardCache.ts
monitoring-dashboard/src/utils/: chartTheme.ts  csv.ts  time.ts
monitoring-server/: README.md  alerts-config.json  env  env.example  package-lock.json  package.json
monitoring-server/client_config/: env
monitoring-server/src/: index.ts
monitoring-server/src/config/: index.ts
monitoring-server/src/database/: index.ts  schemas.ts
monitoring-server/src/models/: activity-log.model.ts  employee.model.ts
monitoring-server/src/routes/: analytics.routes.ts  connected-clients.routes.ts  dashboard.routes.ts  eod-reports.routes.ts  monitoring.routes.ts  otp.routes.ts  screenshot-archive.routes.ts  screenshot.routes.ts  server-config.routes.ts
(+26 files in other folders)
