[package]
name = "monitoring-client"
version = "0.0.20"
edition = "2021"
authors = ["ScreenTime Team"]
description = "Employee monitoring client for ScreenTime system"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
zip = "0.6"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
tracing-appender = "0.2"

# Configuration
dotenv = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.21"

# Image processing
image = "0.24"

# Screenshot capture
screenshots = "0.7"

# System information
sysinfo = "0.30"

# File system watching
notify = "6.1"

# LZ4 compression (for Firefox session files)
lz4 = "1.24"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Atomic operations
parking_lot = "0.12"

# Path utilities
directories = "5.0"
dirs = "5.0"
regex = "1.11"

[target.'cfg(windows)'.dependencies]
# System tray
trayicon = "0.1"
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "shellapi", "winnt", "processenv", "winbase", "handleapi"] }
# GUI dialogs
rfd = "0.14"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
] }
uiautomation = { version = "0.19", features = ["control"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# Use unwinding (not abort) so a panic in one monitoring subsystem (e.g. the
# native screenshot/image backend on a display change) can be caught with
# catch_unwind and recovered, instead of aborting the whole long-running agent.
panic = "unwind"

[profile.test]
opt-level = 1

[lib]
name = "monitoring_client"
path = "src/lib.rs"

[[bin]]
name = "monitoring-client"
path = "src/main.rs"

# Windows-specific build dependencies for resource embedding
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Windows resource configuration to hide console window
[package.metadata.winres]
OriginalFilename = "monitoring-client.exe"
FileDescription = "ScreenTime Monitoring Client"
ProductName = "ScreenTime Monitoring"
CompanyName = "ScreenTime"
