[package]
name = "screentime-watchdog"
version = "0.0.20"
edition = "2021"
authors = ["ScreenTime Team"]
description = "Transparent recovery watchdog for ScreenTime Monitoring"
license = "Proprietary"

[dependencies]
monitoring-client = { path = ".." }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
